--- a/flex.html
+++ b/flex.html
@@ -39,7 +39,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio ipsa molestias iusto animi obcaecati aut atque incidunt. Cupiditate, voluptas? Repellat at assumenda quaerat voluptas incidunt facilis, beatae labore possimus saepe?</p>
               </div>
               <div class="box-flex-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam cumque eligendi quaerat ex. Perferendis, facere? Quos, numquam consequuntur recusandae non laudantium animi asperiores delectus mollitia necessitatibus nam totam odit? Provident ducimus dolore explicabo pariatur corporis ad accusamus culpa impedit eveniet excepturi? Voluptatem numquam omnis fugiat quo similique non itaque sint.</div>
-             
+              <div class="box-flex-item" >增加一欄</div>
               
             </div>            
             </div>
